# medgraph

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/: Dockerfile  main.py
backend/api/routers/: router.py
backend/api/schemas/: schemas.py
backend/core/config/: config.py
backend/services/: detector.py  preprocessor.py
backend/services/models/reasoning/: reasoner.py
backend/services/models/reasoning/confidence/: calibrator.py
backend/services/models/reasoning/knowledge_graph/: builder.py
backend/services/models/reasoning/report_engine/: generator.py
backend/services/models/reasoning/severity/: engine.py
backend/services/models/storage/audit/: manager.py
backend/services/models/storage/cases/: manager.py
backend/services/models/storage/database/: connection.py  models.py
backend/services/models/vision/mri/: brain_unet.py
backend/services/models/vision/shared/: base.py  overlay_generator.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfidenceGauge.tsx  FindingsTable.tsx  ReportEditor.tsx  Sidebar.tsx
frontend/src/pages/: Analysis.tsx  Dashboard.tsx  History.tsx  KnowledgeGraph.tsx  Upload.tsx
frontend/src/services/: api.ts
tests/: conftest.py  test_api.py  test_coverage_boost.py  test_database.py  test_detector.py  test_knowledge_graph.py  test_preprocessor.py  test_reasoning.py  test_report.py  test_vision.py
training/: train_classifier.py  train_unet.py  train_yolo.py
(+1 files in other folders)
