[project]
name = "medgraph-ai"
version = "0.1.0"
description = "Medical Graph AI Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.28",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "networkx>=3.2.0",
    "opencv-python-headless>=4.9.0.80",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.1.0",
    "monai>=1.3.0",
    "transformers>=4.38.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short --cov=backend"
testpaths = [
    "tests",
]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.vercel]
entrypoint = "backend.main:app"
